# fish-tts

./: .gitignore  README.md  gura_voice.npy  pyproject.toml
fish_tts/: __init__.py  synthesizer.py
fish_tts/models/: __init__.py  inference.py  llama.py  tokenizer.py  vocoder.py
scripts/: benchmark.py  convert_models.py  encode_reference.py  example_synthesis.py  export_codec_onnx.py  export_codec_onnx_v2.py  export_transformer_onnx.py  profile_detailed.py  test_new_features.py
tests/: __init__.py  test_audio.py  test_config.py  test_optimized.py  test_singleton.py  test_synthesis.py
